Changelog for mSearch2.

0.8.3 pl
==============
- [mSearch2] Improved search algorithm.

0.8.2 pl1
==============
- [mFilter2] If no results, message about it will be returned in "&tplOuter=``".

0.8.2 pl
==============
- [mFilter2] Fixed work with MS2 multicategories.
- [mFilter2] Improved working with search results.
- [mSearch2] Improved search algorithm.

0.8.1 pl1
==============
- [mFilter2] Improved work with modified &queryVar=`` and &parentsVar=``.
- [mFilter2] Improved return of error messages, when nothing found.
- [mFilter2] Improved work with limit, when page loaded by direct link.
- [mFilter2] Improved sort links.
- [mFilter2] Array with config for frontend is now available as placeholders with prefix "mse2_". E.g. [[+mse2_start_sort]], [[+mse2_tpls]] etc.

0.8.0 pl
==============
- [#7] You can prefix ids in "&resources=``" and "&parents=``" with dash for excluding from query.
- [#5] Added parameter "&toSeparatePlaceholders=``" to snippet mFilter2. Parameter "&toPlaceholder" renamed to "&toPlaceholders".
- Fixed issues when parents not in current contexts.
- Added parameter "&hideContainers=``" to both snippets.
- Added parameters "&tplWrapper=``" and "&wrapIfEmpty=``" to snippet mSearch2.
- Accelerated method mse2FiltersHandler::filterNumber().
- Fixed bug in filters, when TVs has capital letters in the name.
- [mFilter2] Added default implementation of "limit" parameter.
- [mFilter2] Added default implementation of range slider.
- [mFilter2] Added default implementation of list of selected inputs.
- Method "mSearch2.load()" in default javascript can receive filter parameters and callback function.

0.7.0 pl
==============
- Added support for list-style TVs.
- Fixed issues with pdoTools installation.

0.6.2 pl2
==============
- [mFilter2] New parameter "tpls" for change tpl of rows in request.
- [mFilter2] Fixed warning in log when no MS2 installed.
- [mFilter2] Fixed cache problem when retrieving products in multicategories, again.

0.6.1 pl